--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -420,7 +420,7 @@ EstimateScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_estimatedhours")
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =50
+                    Height: =95
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_estimatedhours")
                     Required: =false
                     Update: =IntxtEstimatedHours.Text
@@ -480,7 +480,7 @@ EstimateScreen As screen:
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_notes")
                     Fill: =RGBA(0, 0, 0, 0)
-                    Height: =50
+                    Height: =95
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength,"shlrf_notes")
                     Required: =false
                     Update: =IntxtMaterial.Text
@@ -497,7 +497,7 @@ EstimateScreen As screen:
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: |-
                             =//"Material, part numbers, and other notes *"
-                            "Material / Parts Required / Comments *"
+                            "Material / Parts Required / Comments "
                         Tooltip: ="Material / Parts Required / Comments *"
                         Visible: =VarNotes
                         Width: =Parent.Width - 60
@@ -511,7 +511,7 @@ EstimateScreen As screen:
                         DisplayMode: =Parent.DisplayMode
                         Font: =Font.Arial
                         Height: =80
-                        HintText: =If(VarNotes,"","Material / Parts Required / Comments *")
+                        HintText: =If(VarNotes,"","Material / Parts Required / Comments ")
                         HoverBorderColor: =RGBA(202, 202, 202, 1)
                         HoverFill: =RGBA(0, 0, 0, 0)
                         MaxLength: =Parent.MaxLength
@@ -528,7 +528,7 @@ EstimateScreen As screen:
                         RadiusTopLeft: =0
                         RadiusTopRight: =0
                         Size: =If(Parent.Width<358,14,Parent.Width>358,14,16)
-                        Tooltip: ="Material / Parts Required / Comments *"
+                        Tooltip: ="Material / Parts Required / Comments "
                         Width: =Parent.Width - 60
                         X: =30
                         Y: =lblMaterial.Y + lblMaterial.Height + 5
@@ -1242,7 +1242,7 @@ EstimateScreen As screen:
                         BorderColor: =RGBA(0, 0, 0, 0)
                         CheckboxBorderColor: =RGBA(116, 116, 116, 1)
                         Color: =If(CboxSafetyES.Value=true,Color.Black,RGBA(149, 149, 149, 1))
-                        Default: =VarTravelSummary
+                        Default: =VarSafetySummary
                         Font: =Font.Arial
                         HoverBorderColor: =
                         HoverColor: =RGBA(0, 0, 0, 1)
@@ -1302,7 +1302,9 @@ EstimateScreen As screen:
                     OnSelect: |-
                         =//IntxtEstimatedHours or  IntxtMaterial or  IntxtContactName or  txtphonenumber_1.Text or  Length of txtphonenumber_1.Text is not equal to 14 or IntxtTotalEstimatedExpense are blank then set varNotification as true otherwise set below variables true and naviate to ImageUploadScreen.
                         If(
-                        IsBlank(IntxtEstimatedHours) || IsBlank(IntxtMaterial) || If(CboxCommunicatedtoCustomer.Value=true,IsBlank(IntxtContactName))
+                        IsBlank(IntxtEstimatedHours) 
+                        //|| IsBlank(IntxtMaterial) 
+                        || If(CboxCommunicatedtoCustomer.Value=true,IsBlank(IntxtContactName))
                         //|| If(CboxCommunicatedtoCustomer.Value=true,IsBlank(txtphonenumber_1.Text))
                         //|| If(CboxCommunicatedtoCustomer.Value=true,Len(txtphonenumber_1.Text)<>14 )
                         || If(CboxAdditionalExpensesRequired.Value=true,IsBlank(IntxtTotalEstimatedExpense))||If(CboxTravelRequired.Value=true,IsBlank(IntxtTotalEstimatedHoursofTravel)),
