--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -187,40 +187,6 @@ ViewDetailsScreen As screen:
                 Y: =10
                 ZIndex: =1
 
-                Safety_DataCard1 As typedDataCard.comboBoxOptionSetSingleEditCard:
-                    BorderStyle: =BorderStyle.Solid
-                    DataField: ="shlrf_safety"
-                    Default: =ThisItem.Safety
-                    DisplayMode: =Parent.DisplayMode
-                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_safety")
-                    Fill: =RGBA(0, 0, 0, 0)
-                    Height: =50
-                    Required: =false
-                    Update: =
-                    Width: =728
-                    X: =0
-                    Y: =21
-                    ZIndex: =1
-
-                    CboxUnitDownVDS_1 As checkbox:
-                        CheckboxBorderColor: =RGBA(0, 0, 0, 1)
-                        Default: =true
-                        DisabledBorderColor: =RGBA(0, 0, 0, 0)
-                        Font: =Font.Arial
-                        FontWeight: =FontWeight.Semibold
-                        HoverBorderColor: =
-                        HoverColor: =RGBA(0, 0, 0, 1)
-                        PressedBorderColor: =
-                        Size: |-
-                            =//18
-                            If(Parent.Width<378,12,Parent.Width<500,14,16)
-                        Text: ="Safety"
-                        Visible: =If(ThisItem.Safety='Safety (LeadInformations)'.Yes,true,false)
-                        Width: =Parent.Width - 60
-                        X: =40
-                        Y: =18
-                        ZIndex: =1
-
                 LeadTrackingNumber_DataCard1 As typedDataCard.textualViewCard:
                     BorderColor: =RGBA(0, 0, 0, 1)
                     BorderStyle: =BorderStyle.Solid
@@ -1296,6 +1262,40 @@ ViewDetailsScreen As screen:
                         X: =30
                         Y: =lblLeadCommentHeadingVDS.Height+lblLeadCommentHeadingVDS.Y
                         ZIndex: =5
+
+                Safety_DataCard1 As typedDataCard.comboBoxOptionSetSingleEditCard:
+                    BorderStyle: =BorderStyle.Solid
+                    DataField: ="shlrf_safety"
+                    Default: =ThisItem.Safety
+                    DisplayMode: =Parent.DisplayMode
+                    DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_safety")
+                    Fill: =RGBA(0, 0, 0, 0)
+                    Height: =50
+                    Required: =false
+                    Update: =
+                    Width: =Parent.Width
+                    X: =0
+                    Y: =21
+                    ZIndex: =1
+
+                    CboxUnitDownVDS_1 As checkbox:
+                        CheckboxBorderColor: =RGBA(0, 0, 0, 1)
+                        Default: =true
+                        DisabledBorderColor: =RGBA(0, 0, 0, 0)
+                        Font: =Font.Arial
+                        FontWeight: =FontWeight.Semibold
+                        HoverBorderColor: =
+                        HoverColor: =RGBA(0, 0, 0, 1)
+                        PressedBorderColor: =
+                        Size: |-
+                            =//18
+                            If(Parent.Width<378,12,Parent.Width<500,14,16)
+                        Text: ="Safety"
+                        Visible: =If(ThisItem.Safety='Safety (LeadInformations)'.Yes,true,false)
+                        Width: =Parent.Width - 60
+                        X: =30
+                        Y: =18
+                        ZIndex: =1
 
             lblUploadedImages As label:
                 Fill: =RGBA(255, 255, 255, 1)
