--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -4,7 +4,8 @@ QuotedSOldLeads As screen:
         Set(VarDownIcon,true);
         If(Connection.Connected=false,Notify("Internet is not connected,please try again later.",NotificationType.Error)
         //,Notify("Internet is connected",NotificationType.Success)
-        )
+        );
+        UpdateContext({locInfoExpanded:false});
 
     ctnMainSoldLeads As groupContainer.verticalAutoLayoutContainer:
         Fill: =RGBA(219, 219, 219, 1)
