--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -1070,7 +1070,7 @@ DashboardScreen As screen:
                         Navigate(CreatLeadScreen);
                         Set(VarIndicator,true);
                         
-                    PressedBorderColor: =Color.Red
+                    PressedBorderColor: =RGBA(220,0,0,1)
                     RadiusBottomLeft: =6
                     RadiusBottomRight: =6
                     RadiusTopLeft: =6
