--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -1067,6 +1067,7 @@ DashboardScreen As screen:
                         Set(VarCommunication,false);
                         Set(VarAdditionExpense,false);
                         Set(VarTravel,false);
+                        Set(VarSafetySummary,false);
                         Navigate(CreatLeadScreen);
                         Set(VarIndicator,true);
                         
