--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -1416,7 +1416,7 @@ LeadSummaryScreen As screen:
                         Height: =60
                         Required: =false
                         Update: =Safety_DataCard2.Default
-                        Width: =737
+                        Width: =Parent.Width
                         X: =0
                         Y: =19
                         ZIndex: =1
