--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1233,7 +1233,7 @@ EstimateScreen As screen:
                     Height: =50
                     Required: =false
                     Update: =
-                    Width: =719
+                    Width: =Parent.Width
                     X: =0
                     Y: =10
                     ZIndex: =1
