--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -1333,7 +1333,7 @@ ViewDetailsScreen As screen:
                 ImageVDS As image:
                     BorderThickness: =2
                     Height: =If(Parent.Width>Parent.Height,Parent.TemplateHeight/1.2,Parent.TemplateHeight/1.4)
-                    Image: =ThisItem.Images
+                    Image: =ThisItem.Images.Full
                     OnSelect: |
                         =Set(VarImagePopup,true)
                     PaddingBottom: =10
@@ -1360,7 +1360,7 @@ ViewDetailsScreen As screen:
             Height: |-
                 =
                 If(Parent.Width>500,Parent.Height/2,Parent.Width>1000,Parent.Height/3,Parent.Height/3)
-            Image: =glryImageVDS.Selected.Images.Value
+            Image: =glryImageVDS.Selected.Images
             PaddingBottom: =5
             PaddingLeft: =5
             PaddingRight: =5
