--- a/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/ViewDetailsScreen.fx.yaml
@@ -1356,6 +1356,7 @@ ViewDetailsScreen As screen:
         ZIndex: =4
 
         imgImagePopupVDS As image:
+            DisplayMode: =DisplayMode.View
             Fill: =RGBA(255, 255, 255, 1)
             Height: |-
                 =
